claws-mail 3.17.1.1-6
	* product update to 3.17.1-1
	* fixed package version in spec.json
	* fixed displayed version string on uninstall
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2018-09-17 07:29:11 +0200

claws-mail 3.16.0.3-6
	* product update to 3.16.0-3
	* outsourced changelog
	* updated preinst & postinst (more generic)
	* improved product_downloader (check md5sum)
	* update Makefile: 
		* support for OPSI 4.1
		* option KEEPFILES
		* calculate/verify md5sums
	* consider software build number for download and package release
	* updated readme.md
	* new property: log_level
	* adjusted checkvars.sh
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2018-07-30 10:38:44 +0200

claws-mail 3.16.0-5
	* fix OS detection for Windows 10
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2018-02-27 12:38:05 +0100

claws-mail 3.16.0-4:
	* Makefile improvements, support for custom names (self download packages)
	* streamlined postinst.in
	* moved and modified: package_download.sh.in to product_downloader.sh.in
	* adjusted name for $Installer$	
	* Update psdetail -> v0.1.9.0dev
	* moved: pystache_opsi.py
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2018-02-19 10:41:40 +0100

{{ORGPREFIX}}claws-mail 3.16.0-3:
	* refresh of build environment
	* allow creation of "batteries included" and "auto download" packages
	* refresh readme.md
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2017-12-22 14:08:18 +0100
	
{{ORGPREFIX}}claws-mail 3.16.0-2 testing:
	* update to claws-mail 3.16.0
	* postinst: use ${PRODUCT_VERSION} for VERSION instead of "opsi-admin ..." command
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2017-12-22 08:17:31 +0100

{{ORGPREFIX}}claws-mail 3.15.0-2 testing:
	* Update PSDETAIL to v0.1.9.0dev
	* extended checkinstance.opsiinc: search for part of commandline allowed
	* delsub.opsiinc: kill pdf viewer with manual (if allowed)
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2017-07-07 15:22:42 +0200


{{ORGPREFIX}}claws-mail 3.15.0-1 testing:
	* initial